--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -10,7 +10,6 @@
     --btn-background: 200 10% 91%;
     --btn-background-hover: 200 10% 89%;
     --foreground: 200 50% 3%;
-      
   }
 
   @media (prefers-color-scheme: dark) {
@@ -28,6 +27,35 @@
     @apply border-foreground/20;
   }
 }
-body{
-  font-family:"Poppins", sans-serif;
+body {
+  font-family: "Manrope", sans-serif;
 }
+
+.loading {
+  animation: load infinite;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+  animation-duration: 2s;
+}
+
+.slide-out {
+  transition: all ease-out;
+  transition-duration: 4s;
+  transition-behavior: inherit;
+}
+.slide-in {
+  transition: all cubic-bezier(0.97, 0.02, 0.21, 1);
+  transition-duration: 4s;
+  transition-behavior: inherit;
+  transition-delay: 10s;
+}
+/* @keyframes load {
+  10% {
+    
+    font-size: 1px;
+  }
+  100% {
+    
+    font-size: 5px;
+  }
+} */
