--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -21,14 +21,27 @@
     }
   } */
 }
+.chats::-webkit-scrollbar {
+  width: 0.4em;
+}
+
+.chats::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.chats::-webkit-scrollbar-thumb {
+  background-color: rgb(115 115 115);
+  outline: 1px solid rgb(115 115 115);
+  border-radius: 500px;
+}
 
 @layer base {
   * {
     @apply border-foreground/20;
   }
 }
-body {
-  font-family: "Manrope", sans-serif;
+* {
+  font-family: "Young Serif", serif;
 }
 
 .loading {
