--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Young+Serif&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Funnel+Display:wght@300..800&family=Young+Serif&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700");
 
 @tailwind base;
 @tailwind components;
@@ -41,7 +42,10 @@
   }
 }
 * {
-  font-family: "Young Serif", serif;
+  font-family: "Comfortaa", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
 }
 
 .loading {
